   the development trunk). This allows to produce more relevant (monotonously
   growing) version identifiers for packages and similar artifacts, with more
   meaningful upgrades via development snapshots, eventually. A copy of the
   current version information would be embedded into "dist" archives as a
   `VERSION_DEFAULT` file. [#1949]

 - drivers, `upsd`, `upsmon`: reduce "scary noise" about failure to `fopen()`
   the PID file (which most of the time means that no previous instance of
   the daemon was running to potentially conflict with), especially useless
   since in recent NUT releases the verdicts from `sendsignal*()` methods
   are analyzed and lead to layman worded situation reports in these programs.
   [issue #1782, PR #2384]

 - drivers started with the `-FF` command-line option (e.g. wrapped into the
   systemd units to stay "foregrounded" *and* save a PID file anyway) should
   now also handle an existing PID file to interact with the earlier instance
   of the driver program, if still running (e.g. started manually). [#2384]

 - Extended instant commands for driver reloading with a `driver.exit`
   command for a protocol equivalent of sending a `SIGTERM`, e.g. when
   a newer instance of the driver program tries to start. [#1903, #2392]

 - A new `NUT_QUIET_INIT_BANNER` envvar (presence or "true" value) can now
   prevent the tool name and NUT version banner from being unilaterally
   printed out when NUT programs start. [issues #1789 vs. #316; #2573]

 - The `upsdrvctl` should now warn if executed on systems where NUT was
   built with support for service management frameworks like systemd or SMF,
   so nut-driver service units prepared by `nut-driver-enumerator` would
   conflict with manually-executed driver programs. This warning can be
   hushed by exporting a `NUT_QUIET_INIT_NDE_WARNING` environment variable
   with any value.

 - Extended `upsdrvctl` with a `list` operation (or `-l` option) to report