@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3237 utf-8
+personal_ws-1.1 en 3244 utf-8
 AAC
 AAS
 ABI
@@ -3087,6 +3087,7 @@ upslogx
 upsmon
 upsmon's
 upsname
+upsnotify
 upsonbatt
 upspass
 upspasswd
