@@ -402,6 +402,7 @@ typedef enum eupsnotify_state {
 	NOTIFY_STATE_STATUS,	/* Send a text message per "fmt" below */
 	NOTIFY_STATE_WATCHDOG	/* Ping the framework that we are still alive */
 } upsnotify_state_t;
+const char *str_upsnotify_state(upsnotify_state_t state);
 /* Note: here fmt may be null, then the STATUS message would not be sent/added */
 int upsnotify(upsnotify_state_t state, const char *fmt, ...)
 	__attribute__ ((__format__ (__printf__, 2, 3)));
