@@ -86,6 +86,12 @@ https://github.com/networkupstools/nut/milestone/11
    current version information would be embedded into "dist" archives as a
    `VERSION_DEFAULT` file. [#1949]
 
+ - the `upsnotify()` common code introduced in recent NUT releases (integrating
+   with service management frameworks, etc.) was a bit cryptic when it reported
+   a *failure to notify* (e.g. when not running as a service currently), fixed
+   now to report human-friendly text instead of internal enum codes. Follow-up
+   to [PR #1590, PR #2136]
+
  - drivers, `upsd`, `upsmon`: reduce "scary noise" about failure to `fopen()`
    the PID file (which most of the time means that no previous instance of
    the daemon was running to potentially conflict with), especially useless
